--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,17 +1,87 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
 
-.your-cv {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 900;
+.fa-solid {
+  margin-right: 10px;
 }
 
-.right-side {
-  max-width: 900px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+form {
   padding: 2rem;
-  border: 3px solid #000;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, .3);
+  width: 100%;
+  background-color: #f8f7fc;
+}
+
+.container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.resume {
+  height: 100vh;
+  width: 50%;
+  display: flex;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.general-info {
+  min-width: 30%;
+  max-width: 40%;
+  padding: 2rem;
+  background-color: #434345;
+  color: #fff;
+}
+
+.advanced-info {
+  width: 100%;
+  padding: 2rem;
+  background-color: #fff;
+  color: #000;
+}
+
+.full-name {
+  font-size: 2.25rem;
+  margin-bottom: 1.5rem;
+}
+
+.title {
+  margin: 1.5rem 0;
+}
+
+.education {
+  letter-spacing: 1.5px;
+}
+
+.education::before {
+  content: '• ';
+}
+
+.general-title {
+  margin-bottom: 1.5rem;
+}
+
+.work::before {
+  content: '• ';
+}
+
+.work {
+  font-size: 1.35rem;
+  letter-spacing: 1px;
+}
+
+.about-me {
+  font-size: 1rem;
+  margin-bottom: 10px;
 }
