Style application for better UX

--- a/src/components/UI/MyInput/MyInput.module.css
+++ b/src/components/UI/MyInput/MyInput.module.css
@@ -1,7 +1,7 @@
 .MyInput {
   width: 40%;
   padding: 13px 16px;
-  margin: 0px 18px 35px 18px;
+  margin: 0 35px 35px 0;
   border: 1px solid teal;
   border-radius: 5px;
 }
