--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,15 +12,15 @@
 }
 
 .form-container {
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   width: 50%;
 }
 
 form {
-  padding: 2rem;
+  padding: 0 1rem 0 1rem;
   width: 100%;
-  background-color: #f8f7fc;
 }
 
 .container {
@@ -62,6 +62,7 @@ form {
 
 .education {
   letter-spacing: 1.5px;
+  margin-bottom: 6px;
 }
 
 .education::before {
@@ -79,9 +80,10 @@ form {
 .work {
   font-size: 1.35rem;
   letter-spacing: 1px;
+  margin-bottom: 6px;
 }
 
 .about-me {
   font-size: 1rem;
-  margin-bottom: 10px;
+  margin-bottom: 18px;
 }
